# libnx-rs-template

./: Cargo.toml  enter.sh  makew
.cargo/: config
src/: main.rs  support.rs
src/util/: mod.rs  nx.rs  pc.rs
tests/: hbmenu.nca
