[package]
name = "fuji"
version = "0.0.5"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

[[bin]]
name = "libnxbin"
path = "src/main.rs"

[dependencies]
libc = "0.2"
hactool-sys = "0.4"
cfg-if = "0.1"
regex = "1"

[target.'cfg(target_os = "horizon")'.dependencies]
piston = "0.37"
pistoncore-input = "0.21.0"
piston2d-graphics = "0.26"
image = "0.19"
rusttype = "0.5"
rand = "0.5"

[target.'cfg(not(target_os = "horizon"))'.dependencies]
dirs = "1"

[target.'cfg(target_os = "horizon")'.dependencies.libnx-rs]
git = "https://github.com/leo60228/libnx-rs"
branch = "master"

[patch."https://github.com/ischeinkman/libnx-rs"]
libnx-rs = { git = "https://github.com/leo60228/libnx-rs" }

[target.'cfg(target_os = "horizon")'.dependencies.pistoncore-libnx-rs_window]
git = "https://github.com/ischeinkman/libnx-rs_window"

[target.'cfg(target_os = "horizon")'.dependencies.piston_window]
version = "^0.82.0"
default-features = false

[target.'cfg(target_os = "horizon")'.dependencies.conrod]
features = ["piston"] 
version = "0.61.1"

#[replace]
#"num_cpus:1.9.0" = { git = 'https://github.com/ischeinkman/num_cpus/' }

[dev-dependencies]
mktemp = "0.3"
